fix markdown image caused element overflow

--- a/src/app/components/cards/PostFull.scss
+++ b/src/app/components/cards/PostFull.scss
@@ -5,6 +5,7 @@
 }
 
 .PostFull {
+  overflow: hidden;
   padding: 2rem 1rem 1rem 1rem;
   // margin: 0 auto;
   max-width: 54rem;
